--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
        
   </head> 
-  <body id="mainBody" onunload="prepareForRefresh();"> 
+  <body id="mainBody" > 
     <link rel="stylesheet" data-bind="attr: {href: clientVM.cssPath}"/>
     <div data-role="page" data-theme="a" id="home">
 
